# husky_inekf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: noise.yaml  prior.yaml  settings.yaml
data/: gt.txt  husky_inekf_camera_odom_test.txt  husky_inekf_pose_kitti.txt  husky_inekf_pose_tum.txt  third_floor_path_map_tum.txt
data/3floor_data/: bias_est.txt  husky_inekf_pose_kitti.txt  husky_inekf_pose_tum.txt  imu.txt  vel_est.txt  vel_input.txt  zigzac.mat
data/camera_odom_test/: husky_inekf_camera_odom.txt  husky_inekf_camera_odom_test.txt  husky_inekf_camera_vel_t0.5.txt  husky_inekf_camera_vel_t_0.1.txt  husky_inekf_wheeled_odom.txt  husky_inekf_wheeled_vel.txt  tf_x_180.json  zed_slam.txt
data/no_yaw_bias/: husky_inekf_pose_joint_bias_std_001_tum.txt  husky_inekf_pose_joint_bias_std_01.txt  husky_inekf_pose_tum.txt  path_map_tum.txt  path_odom_tum.txt  tf.json  tf_inv.json
data/no_yaw_bias/simulation/: gt_path_tum.txt  husky_inekf_pose_tum.txt  husky_inekf_pose_tum_no_init_bias.txt
include/communication/: husky_comms.h  pose_publisher_node.hpp
include/core/: InEKF.h  LieGroup.h  Observations.h
include/estimator/: body_estimator.hpp  husky_estimator.hpp
include/system/: husky_state.hpp  husky_system.hpp
include/utils/: camera_odom.hpp  husky_data.hpp  imu.hpp  joint_state.hpp  measurement.h  utils.hpp  velocity.hpp
launch/: husky_estimator.launch
matlab/: plot_data.m
rviz/: default.rviz  default2.rviz
src/: husky_estimator.cpp
src/communication/: gps_listener_node.cpp  husky_comms.cpp  path_publisher_node.cpp  pathmap_listener_node.cpp  pathodom_listener_node.cpp  pose_publisher_node.cpp
src/core/: InEKF.cpp  LieGroup.cpp  NoiseParams.cpp  RobotState.cpp
src/estimator/: body_estimator.cpp
src/system/: husky_state.cpp  husky_system.cpp
src/utils/: measurement.cpp  utils.cpp
